--- a/app/styles/components/menus/_main_menu.scss
+++ b/app/styles/components/menus/_main_menu.scss
@@ -1,6 +1,10 @@
 .layer-main, .layer-account {
   background-color: #F2F2F2;
 
+  .layer-inner {
+    background-color: #F2F2F2;
+  }
+
   .layer-content {
     padding-left: 0;
     padding-right: 0;
